# spec-decoding-capstone

./: .gitignore  README.md  get_data.py  pyproject.toml  reference_table.csv  reference_table_bilingual.csv  reference_table_monolingual.csv  run.py  testing.py
data/ibo/: tatoeba.tsv
data/lkt/: tatoeba.tsv
data/nepali data/: Sentence pairs in English-Nepali - 2026-01-14.tsv
experiments/: baseline.cfg  baseline_spec.cfg  distill.cfg  general_kd.cfg  ngram.cfg  ngram_story.cfg  no_spec.cfg  run_baseline_spec.sh  seqkd.cfg  spec_greedy.cfg  spec_sampled.cfg  spec_sampled_story.cfg
experiments/distillation/: distill.cfg  logprobs_general.cfg  logprobs_translation.cfg
scripts/: cl1_distill.sh  cl1_eval_distill_gen.sh  cl1_eval_distill_trans.sh  cl1_eval_gen_distill.sh  cl1_gen_lps.sh  cl1_run_eval.sh  distill.py  distill_nepali.py  generate_seqkd_data.py  generate_teacher_logprobs.py  lcs_distill.sh  lcs_run_eval.sh  run_baseline_spec.sh  run_clearlab1_gen_lps.sh  run_clearlab1_sweep.sh  run_clearlab2.sh  run_params_sweep_alpine.sh  sweep_distill.sh
src/: __init__.py  distill_draft.py  evaluation.py  generation.py  graph_generation.py  metrics.md  n_gram.py  spec_dec_metrics.py  spec_decode.py  story_gen_prompt.py  utils.py
src/config/: config.py  config_to_dataclass.py
src/data/: combined_describe_data.py  create_inputs.py  dataset.py  describe_data.py  hugging_face_data.py  reference_table_bilingual.csv  reference_table_monolingual.csv  (+1 more)
viz/: bilingual.tex  bilingual_source.tex  combined_bi_mono.tex  kl_results.csv  monolingual.tex  monolingual_source.tex
(+40 files in other folders)
