[project]
name = "spec-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ruff>=0.14.7",
    # for the distillation script
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.24.2",
    "nltk>=3.8",
    "sacrebleu>=2.0.0",
    "tiktoken>=0.12.0",
    "pandas>=3.0.1",
    "huggingface-hub>1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
reportPrivateImportUsage = "none"
